[gd_scene load_steps=84 format=2]

[ext_resource path="res://minion.gd" type="Script" id=1]
[ext_resource path="res://external/minion_frames/idle_00.png" type="Texture" id=2]
[ext_resource path="res://external/minion_frames/idle_01.png" type="Texture" id=3]
[ext_resource path="res://external/minion_frames/idle_02.png" type="Texture" id=4]
[ext_resource path="res://external/minion_frames/idle_03.png" type="Texture" id=5]
[ext_resource path="res://external/minion_frames/idle_04.png" type="Texture" id=6]
[ext_resource path="res://external/minion_frames/idle_05.png" type="Texture" id=7]
[ext_resource path="res://external/minion_frames/idle_06.png" type="Texture" id=8]
[ext_resource path="res://external/minion_frames/idle_07.png" type="Texture" id=9]
[ext_resource path="res://external/minion_frames/idle_08.png" type="Texture" id=10]
[ext_resource path="res://external/minion_frames/idle_09.png" type="Texture" id=11]
[ext_resource path="res://external/minion_frames/idle_10.png" type="Texture" id=12]
[ext_resource path="res://external/minion_frames/idle_11.png" type="Texture" id=13]
[ext_resource path="res://external/minion_frames/idle_12.png" type="Texture" id=14]
[ext_resource path="res://external/minion_frames/idle_13.png" type="Texture" id=15]
[ext_resource path="res://external/minion_frames/idle_14.png" type="Texture" id=16]
[ext_resource path="res://external/minion_frames/idle_15.png" type="Texture" id=17]
[ext_resource path="res://external/minion_frames/idle_16.png" type="Texture" id=18]
[ext_resource path="res://external/minion_frames/idle_17.png" type="Texture" id=19]
[ext_resource path="res://external/minion_frames/idle_18.png" type="Texture" id=20]
[ext_resource path="res://external/minion_frames/idle_19.png" type="Texture" id=21]
[ext_resource path="res://external/minion_frames/idle_20.png" type="Texture" id=22]
[ext_resource path="res://external/minion_frames/idle_21.png" type="Texture" id=23]
[ext_resource path="res://external/minion_frames/idle_22.png" type="Texture" id=24]
[ext_resource path="res://external/minion_frames/idle_23.png" type="Texture" id=25]
[ext_resource path="res://external/minion_frames/idle_24.png" type="Texture" id=26]
[ext_resource path="res://external/minion_frames/idle_25.png" type="Texture" id=27]
[ext_resource path="res://external/minion_frames/idle_26.png" type="Texture" id=28]
[ext_resource path="res://external/minion_frames/idle_27.png" type="Texture" id=29]
[ext_resource path="res://external/minion_frames/idle_28.png" type="Texture" id=30]
[ext_resource path="res://external/minion_frames/idle_29.png" type="Texture" id=31]
[ext_resource path="res://external/minion_frames/idle_30.png" type="Texture" id=32]
[ext_resource path="res://external/minion_frames/idle_31.png" type="Texture" id=33]
[ext_resource path="res://external/minion_frames/idle_32.png" type="Texture" id=34]
[ext_resource path="res://external/minion_frames/idle_33.png" type="Texture" id=35]
[ext_resource path="res://external/minion_frames/idle_34.png" type="Texture" id=36]
[ext_resource path="res://external/minion_frames/idle_35.png" type="Texture" id=37]
[ext_resource path="res://external/minion_frames/idle_36.png" type="Texture" id=38]
[ext_resource path="res://external/minion_frames/idle_37.png" type="Texture" id=39]
[ext_resource path="res://external/minion_frames/idle_38.png" type="Texture" id=40]
[ext_resource path="res://external/minion_frames/idle_39.png" type="Texture" id=41]
[ext_resource path="res://external/minion_frames/idle_40.png" type="Texture" id=42]
[ext_resource path="res://external/minion_frames/idle_41.png" type="Texture" id=43]
[ext_resource path="res://external/minion_frames/idle_42.png" type="Texture" id=44]
[ext_resource path="res://external/minion_frames/idle_43.png" type="Texture" id=45]
[ext_resource path="res://external/minion_frames/idle_44.png" type="Texture" id=46]
[ext_resource path="res://external/minion_frames/idle_45.png" type="Texture" id=47]
[ext_resource path="res://external/minion_frames/idle_46.png" type="Texture" id=48]
[ext_resource path="res://external/minion_frames/idle_47.png" type="Texture" id=49]
[ext_resource path="res://external/minion_frames/idle_48.png" type="Texture" id=50]
[ext_resource path="res://external/minion_frames/idle_49.png" type="Texture" id=51]
[ext_resource path="res://external/minion_frames/idle_50.png" type="Texture" id=52]
[ext_resource path="res://external/minion_frames/idle_51.png" type="Texture" id=53]
[ext_resource path="res://external/minion_frames/idle_52.png" type="Texture" id=54]
[ext_resource path="res://external/minion_frames/idle_53.png" type="Texture" id=55]
[ext_resource path="res://external/minion_frames/idle_54.png" type="Texture" id=56]
[ext_resource path="res://external/minion_frames/idle_55.png" type="Texture" id=57]
[ext_resource path="res://external/minion_frames/idle_56.png" type="Texture" id=58]
[ext_resource path="res://external/minion_frames/idle_57.png" type="Texture" id=59]
[ext_resource path="res://external/minion_frames/idle_58.png" type="Texture" id=60]
[ext_resource path="res://external/minion_frames/idle_59.png" type="Texture" id=61]
[ext_resource path="res://external/minion_frames/idle_60.png" type="Texture" id=62]
[ext_resource path="res://external/minion_frames/idle_61.png" type="Texture" id=63]
[ext_resource path="res://external/minion_frames/idle_62.png" type="Texture" id=64]
[ext_resource path="res://external/minion_frames/idle_63.png" type="Texture" id=65]
[ext_resource path="res://external/minion_frames/move_00.png" type="Texture" id=66]
[ext_resource path="res://external/minion_frames/move_01.png" type="Texture" id=67]
[ext_resource path="res://external/minion_frames/move_02.png" type="Texture" id=68]
[ext_resource path="res://external/minion_frames/move_03.png" type="Texture" id=69]
[ext_resource path="res://external/minion_frames/move_04.png" type="Texture" id=70]
[ext_resource path="res://external/minion_frames/move_05.png" type="Texture" id=71]
[ext_resource path="res://external/minion_frames/move_06.png" type="Texture" id=72]
[ext_resource path="res://external/minion_frames/move_07.png" type="Texture" id=73]
[ext_resource path="res://external/minion_frames/move_08.png" type="Texture" id=74]
[ext_resource path="res://external/minion_frames/move_09.png" type="Texture" id=75]
[ext_resource path="res://external/minion_frames/move_10.png" type="Texture" id=76]
[ext_resource path="res://external/minion_frames/move_11.png" type="Texture" id=77]
[ext_resource path="res://external/minion_frames/move_12.png" type="Texture" id=78]
[ext_resource path="res://external/minion_frames/move_13.png" type="Texture" id=79]
[ext_resource path="res://external/minion_frames/move_14.png" type="Texture" id=80]
[ext_resource path="res://external/minion_frames/move_15.png" type="Texture" id=81]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [ ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": true,
"name": "move",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.0
height = 12.0

[node name="minion" type="RigidBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 21
mode = 2
gravity_scale = 5.0
linear_damp = 5.0
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -36 )
scale = Vector2( 6, 6 )
frames = SubResource( 2 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 6, 0 )
shape = SubResource( 1 )

[node name="idle_wait_timer" type="Timer" parent="."]
one_shot = true

[node name="idle_wander_timer" type="Timer" parent="."]
one_shot = true

[node name="think_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="think_timer" to="." method="think"]
